<resources>
    <string name="app_name">cutiepaw</string>
    <string name="contact_us">Contact us</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="cat_with_butterfly">cat_with_butterfly</string>
    <string name="betta_fish">betta_fish</string>
    <string name="golden_retriever">golden_retriever</string>
    <string name="pug_with_glasses">pug_with_glasses</string>
    <string name="cat_and_dog">cat_and_dog</string>
    <string name="bring_your_treat_for_your_pets_to_the_next_level_with_us">Bring Your Treat For Your Pets To The Next Level With Us</string>
    <string name="your_pets_will_thank_you_to_you_because_every_treat_is_matter_for_their_wellness_and_activity_what_are_you_waiting_for_start_exploring_by_clicking_the_button_below">Your pets will thank you to you because every treat is matter for their wellness and activity. What are you waiting for? Start exploring by clicking the button below</string>
    <string name="get_started">Get started</string>
    <string name="hi_welcome_back">Hi, welcome back 👋</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="welcome">Welcome! 😄</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="hi">Hi,</string>
    <string name="rp">Rp</string>
    <string name="pawly_dog_food_dqp">Pawly - Dog Food DQP</string>
    <string name="pet_food">pet food</string>
    <string name="product_desc">Complete and balanced nutrition has antioxidants, vitamins and minerals to help maintain a healthy lifestyle.<br />Optimal levels of omega-6 fatty acid nourish the skin and help keep his coat shiny and healthy.<br />Whole grains and a special fiber blend support healthy digestion with a delicious roasted chicken flavor.<br />Unique, crunchy texture helps clean the teeth with every bite to support good oral health between brushings.<br />Proudly made in the USA with the world’s finest ingredients; contains no high fructose corn syrup, artificial flavors or sugar.</string>
</resources>