<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        android:paddingTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/hi_welcome_back"
            android:textColor="@color/eerie_black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/cornsilk"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/cornsilk"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_outline"
            android:fontFamily="@font/inter_bold"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner_radius"
            android:backgroundTint="@color/dark_olive_green"
            android:fontFamily="@font/inter_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/cornsilk"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner_radius"
            android:backgroundTint="@color/pine_tree"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/cornsilk"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp" />

        <TextView
            android:id="@+id/txtFooterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center|center_horizontal"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/dark_sea_green"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>