<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/lotion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/pet_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:id="@+id/imgProduct"
            android:contentDescription="@string/pet_food" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pawly_dog_food_dqp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/eerie_black"
            android:textSize="24sp"
            android:layout_marginVertical="24dp"
            android:id="@+id/txtProductName" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/dark_olive_green"
            android:textSize="32sp"
            android:layout_marginBottom="24dp"
            android:id="@+id/txtProductPrice" />
    </LinearLayout>

</androidx.cardview.widget.CardView>