<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    tools:context=".RegisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regisTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="32dp"
            android:text="@string/welcome"
            android:textColor="@color/eerie_black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNameRegis"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingHorizontal="24dp"
                android:textColor="@color/cornsilk"
                android:textColorHint="@color/cornsilk"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etEmailRegis"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:backgroundTint="@color/dark_sea_green"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="24dp"
                android:textColor="@color/cornsilk"
                android:textColorHint="@color/cornsilk"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etPasswordRegis"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:backgroundTint="@color/dark_sea_green"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="24dp"
                android:textColor="@color/cornsilk"
                android:textColorHint="@color/cornsilk"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="260dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnClearRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_outline"
                android:fontFamily="@font/inter_bold"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/pine_tree"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_corner_radius"
                android:backgroundTint="@color/dark_olive_green"
                android:fontFamily="@font/inter_bold"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/cornsilk"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_corner_radius"
                android:backgroundTint="@color/pine_tree"
                android:fontFamily="@font/inter_bold"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/cornsilk"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/txtFooterRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center|center_horizontal"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/russian_green"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>