<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_36" />

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="320dp"
                android:scaleType="fitXY"
                android:src="@drawable/pet_food" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="8dp"
                android:text="@string/pawly_dog_food_dqp"
                android:textColor="@color/eerie_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/rp"
                android:textColor="@color/dark_olive_green"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtProductDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/product_desc"
                android:textColor="@color/eerie_black"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>