<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_contact_bg"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/contact_us"
                android:textColor="@color/cornsilk"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/btnPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/earth_yellow"
                android:drawableLeft="@drawable/ic_outline_phone_24"
                android:fontFamily="@font/inter_bold"
                android:paddingHorizontal="130dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textColor="@color/cornsilk"
                android:textSize="14sp"
                app:cornerRadius="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btnMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/earth_yellow"
                android:drawableLeft="@drawable/ic_outline_email_24"
                android:fontFamily="@font/inter_bold"
                android:paddingHorizontal="130dp"
                android:text="@string/mail"
                android:textAllCaps="false"
                android:textColor="@color/cornsilk"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>